--- a/src/features/ui/SortingTable/SortingTable.module.scss
+++ b/src/features/ui/SortingTable/SortingTable.module.scss
@@ -38,6 +38,7 @@
         &:first-child {
           text-align: left;
           padding-left: 20px;
+          padding-right: 20px;
         }
 
         button {
@@ -48,4 +49,11 @@
     }
   }
 
+}
+
+.tdSizeLimiter {
+  display: inline-block;
+  max-height: 90px;
+  overflow: hidden;
+  word-break: break-all;
 }
