refactor getPacks API method to use config object for query parameters, create util to clear out properties with no meaningful value from an object,

--- a/src/features/ui/SortingTable/SortingTable.module.scss
+++ b/src/features/ui/SortingTable/SortingTable.module.scss
@@ -53,7 +53,8 @@
 
 .tdSizeLimiter {
   display: inline-block;
-  max-height: 90px;
+  max-height: 120px;
   overflow: hidden;
-  word-break: break-all;
+  //word-break: break-all;
+  word-break: break-word;
 }
