begin with 'create new pack' functionality

--- a/src/features/ui/SortingTable/SortingTable.module.scss
+++ b/src/features/ui/SortingTable/SortingTable.module.scss
@@ -54,6 +54,7 @@
 .tdSizeLimiter {
   display: inline-block;
   max-height: 120px;
+  max-width: 600px;
   overflow: hidden;
   //word-break: break-all;
   word-break: break-word;
