implement 'delete flashcard' and 'delete pack' functionality

--- a/src/styles/_flat-design-colors.scss
+++ b/src/styles/_flat-design-colors.scss
@@ -60,7 +60,7 @@ $pageBackground: $turquoiseTopaz;
 $pageFormsBackground: $nycTaxi;
 $pageFormsBorder: darken($pageFormsBackground, 20%);
 
-$messagePopupBackground: $nycTaxi;
+$messagePopupBackground: $algalFuel;
 $messagePopupBorder: darken($messagePopupBackground, 20%);
 
 $normalButtonBackground: $algalFuel;
