show confirm dialog (modal) before deleting a flashcard, create useControlledPromise hook

--- a/src/pages/Flashcards/Flashcards.module.scss
+++ b/src/pages/Flashcards/Flashcards.module.scss
@@ -35,5 +35,13 @@
       min-width: 300px;
 
     }
+    h2{
+      font-size: 20px;
+      //font-weight: 700;
+      background-color: #4b7bec;
+      span{
+        margin-left: 20px;
+      }
+    }
   }
 }
