add sorting functionality to table

--- a/src/features/FlashcardsList/FlashcardsList.module.scss
+++ b/src/features/FlashcardsList/FlashcardsList.module.scss
@@ -2,7 +2,7 @@
 
   //background-color: #2d98da;
 
-  p {
+  .defaultContent {
     font-size: 25px;
     min-height: 50vh;
     text-align: center;
