highlight current sorting field in the sorting table, cover all app ui with loading component to prevent multiple requests

--- a/src/features/ui/SortingTable/SortingTable.module.scss
+++ b/src/features/ui/SortingTable/SortingTable.module.scss
@@ -20,6 +20,13 @@
 
       }
     }
+    .filterButton{
+      border: none;
+      outline: none;
+      &.activeFilterButton{
+        background-color: #00E6F6;
+      }
+    }
   }
 
   tbody {
