refactor routes, use position fixed for AppMessagesPopup component

--- a/src/features/AppMessagesPopup/AppMessagesPopup.module.scss
+++ b/src/features/AppMessagesPopup/AppMessagesPopup.module.scss
@@ -1,9 +1,9 @@
 @use 'src/styles/flat-design-colors';
 
 .wrapper{
-  position: absolute;
+  position: fixed;
   z-index: 1000;
-  top: calc(100vh - 120px);
+  bottom: 20px;
   left: 20px;
   color: flat-design-colors.$normalText;
   box-sizing: border-box;
