--- a/src/components/DropdownMenu/DropdownMenu.module.scss
+++ b/src/components/DropdownMenu/DropdownMenu.module.scss
@@ -52,6 +52,7 @@ $collapsedHeight: 50px;
     font-size: 18px;
     font-weight: 700;
     font-family: 'Josefin Sans', sans-serif;
+    cursor: pointer;
 
     span {
       position: absolute;
