--- a/src/components/SortingTable/FillBar/FillBar.module.scss
+++ b/src/components/SortingTable/FillBar/FillBar.module.scss
@@ -1,23 +1,20 @@
+@use 'src/styles/flat-design-colors.scss';
+
 .wrapper{
   width: 100px;
   height:30px;
   box-sizing: border-box;
-  * {
-    box-sizing: border-box;
-  }
-
   .bar{
-    border: 2px solid black;
-    padding: 0;
+    border: 2px solid flat-design-colors.$darkText;
+    background-color: flat-design-colors.$white;
+    padding-top: 2px;
+    padding-bottom: 2px;
     margin: 0;
     width: 100%;
     height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
     .fill{
-      height: 90%;
-      background-color: green;
+      height: 100%;
+      background-color: flat-design-colors.$rangeFill;
     }
   }
 }
