--- a/src/pages/Learn/Learn.module.scss
+++ b/src/pages/Learn/Learn.module.scss
@@ -10,6 +10,15 @@
   .form {
     @extend .form;
     width: 600px;
+    p{
+      word-break: break-word;
+
+    }
+
+    img {
+      height: 200px;
+      width: auto;
+    }
 
     .radios {
       max-height: 100px;
