--- a/src/components/TextArea/TextArea.module.scss
+++ b/src/components/TextArea/TextArea.module.scss
@@ -19,9 +19,9 @@
     border: 0;
     border-bottom: 3px solid flat-design-colors.$normalTextInputBorder;
     min-height: 100px;
-    max-height: 200px;
+    //max-height: 200px;
     min-width: 400px;
-    max-width: 600px;
+    //max-width: 600px;
     font-size: 17px;
     font-family: "Josefin Sans", sans-serif;
     font-weight: 700;
