use conditional rendering for image on Learn page, navigate to previous address by arrow icon click on Flashcards page

--- a/src/pages/Profile/Profile.module.scss
+++ b/src/pages/Profile/Profile.module.scss
@@ -5,6 +5,7 @@
 .wrapper{
   @extend .form;
   height: 550px;
+  align-self: center;
   h1{
     margin-bottom: 0;
     //background-color: #f44336;
