--- a/src/pages/Header/Header.module.scss
+++ b/src/pages/Header/Header.module.scss
@@ -6,11 +6,13 @@
   height: layout-variables.$headerHeight;
   margin: 0;
   padding: 0 50px;
+  display: flex;
+  align-items: center;
 
   button{
     background-color: transparent;
     margin: 0;
-    margin-left: 40px;
+    //margin-left: 40px;
     padding: 0;
     font-size: 18px;
     font-weight: 700;
