--- a/src/pages/Learn/Learn.module.scss
+++ b/src/pages/Learn/Learn.module.scss
@@ -16,8 +16,8 @@
     }
 
     img {
-      height: 200px;
-      width: auto;
+      height: auto;
+      max-width: 300px;
     }
 
     .radios {
