--- a/src/pages/Packs/Packs.module.scss
+++ b/src/pages/Packs/Packs.module.scss
@@ -11,6 +11,10 @@
   font-family: "Josefin Sans", sans-serif;
   font-weight: 700;
 
+  h1 {
+    margin: 10px;
+  }
+
   * {
     box-sizing: border-box;
     //border: 1px solid red;
@@ -23,10 +27,10 @@
   }
 
   .form {
-    //border: 1px solid;
+    border: 1px solid;
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    //justify-content: flex-end;
     align-items: center;
     gap: 50px;
 
