--- a/src/components/Pagination/Pagination.module.scss
+++ b/src/components/Pagination/Pagination.module.scss
@@ -1,13 +1,18 @@
 .wrapper {
-  border: 2px solid #f44336;
+  //border: 2px solid #f44336;
   margin: 0;
   padding: 0;
   display: flex;
-  flex-direction: row;
+  //flex-direction: row;
   //max-width: 500px;
   align-items: center;
-  justify-content: flex-start;
-  gap: 10px;
+  justify-content: center;
+  gap: 5px;
+  width: 500px;
+
+  .button {
+    padding: 10px;
+  }
 
   * {
     //border: 1px solid;
