modify flashcards page layout

--- a/src/components/Button/ButtonFlatDesign.module.scss
+++ b/src/components/Button/ButtonFlatDesign.module.scss
@@ -16,7 +16,6 @@
 
 .button {
   display: inline-block;
-
   box-sizing: border-box;
   width: 100%;
   border: none;
@@ -25,7 +24,6 @@
   text-decoration: none;
   padding: 20px 50px;
   border-radius: layout-variables.$elementsBorderRadius;
-  //margin: 5px;
   border-bottom-style: solid;
   border-bottom-width: 3px;
   transition: text-shadow 0.3s ease;
@@ -33,10 +31,6 @@
   font-weight: 700;
   font-family: 'Josefin Sans', sans-serif;
   cursor: pointer;
-
-  //* {
-  //  box-sizing: border-box;
-  //}
 
   span {
     //border: 1px solid;
@@ -53,9 +47,12 @@
     transition: transform 0.2s;
     left: -5px;
     right: 5px;
-    //transform: translateX(-50%, -50%);
     transform: scaleX(0);
   }
+}
+
+.compactButton {
+  padding: 10px;
 }
 
 .button:active {
@@ -68,7 +65,6 @@
   text-shadow: 2px 2px 0 rgba(0, 0, 0, .3);
 
   span::after {
-    //width: calc(100% - 100px);
     transform: scaleX(1);
     transition: transform 0.4s;
   }
@@ -107,9 +103,9 @@
   }
 }
 
-.wrapper{
+.wrapper {
   button {
-    &:disabled{
+    &:disabled {
       pointer-events: none;
       background-color: flat-design-colors.$disabledNormalButtonBackground;
     }
