--- a/src/components/SortingTable/SortingTable.module.scss
+++ b/src/components/SortingTable/SortingTable.module.scss
@@ -28,7 +28,7 @@
       outline: none;
 
       &.activeFilterButton {
-        background-color: #00E6F6;
+        border-bottom: 2px solid white;
       }
     }
   }
