--- a/src/styles/_flat-design-colors.scss
+++ b/src/styles/_flat-design-colors.scss
@@ -95,3 +95,8 @@ $errorTextInputText: $error;
 $errorTextInputBorder: darken($error, 5%);
 $errorTextInputBackground: lighten($error, 20%);
 $disabledTextInputBackground: $innuendo;
+
+//default dropdown
+
+$dropdownBackground: $blueHorizon;
+$dropdownHover: $blueGrey;
