--- a/src/components/DropdownSelect/DropdownSelect.module.scss
+++ b/src/components/DropdownSelect/DropdownSelect.module.scss
@@ -1,13 +1,14 @@
 @use '../../styles/flat-design-colors';
 
 $menuButtonColor: flat-design-colors.$elementsColorDefault;
-$optionsBoxColor: flat-design-colors.$elementsBorderColorDefault;
+$optionsBoxColor: flat-design-colors.$dropdownBackground;
 
 $optionHoverColor: flat-design-colors.$elementsColorDefault;
 $menuButtonHoverColor: flat-design-colors.$elementsColorDefault;
 $menuButtonBorderColor: flat-design-colors.$normalButtonBorder;
 
 $arrowIconColor: white;
+$arrowBackgroundColor: flat-design-colors.$dropdownBackground;
 
 $menuButtonTextColor: white;
 $optionTextColor: white;
@@ -50,6 +51,8 @@ $compactStyleWidth: 220px;
     font-size: 18px;
     font-weight: 700;
     font-family: 'Josefin Sans', sans-serif;
+    cursor: pointer;
+
 
 
     span {
@@ -57,7 +60,7 @@ $compactStyleWidth: 220px;
       right: 0;
       top: 0;
       bottom: 0;
-      background-color: #2f7796;
+      background-color: $arrowBackgroundColor;
       font-size: 26px;
       font-weight: 900;
       padding-right: 20px;
@@ -80,7 +83,7 @@ $compactStyleWidth: 220px;
 
   .menuButtonCompact {
     padding: 10px 20px;
-    width: $compactStyleWidth;
+    //width: $compactStyleWidth;
   }
 
   .menuExpanded {
