--- a/src/pages/Header/Header.module.scss
+++ b/src/pages/Header/Header.module.scss
@@ -11,22 +11,9 @@
   align-items: center;
   justify-content: center;
 
-  button{
+  .headerMenu {
     position: absolute;
     right: 40px;
-    //top: 20px;
-    background-color: transparent;
-    margin: 0;
-    //margin-left: 40px;
-    padding: 0;
-    font-size: 18px;
-    font-weight: 700;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    &:hover {
-      text-shadow: 2px 2px 0 rgba(0, 0, 0, .3);
-    }
   }
 
   a {
@@ -35,6 +22,6 @@
   }
 }
 
-.activeLink{
+.activeLink {
   border-bottom: 3px solid white;
 }
